[package]
name = "turbo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
build-target = "0.4.0"
bindgen = "0.60.1"

[dev-dependencies]
assert_cmd = "2.0.4"
itertools = "0.10.5"

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
# clap cannot be upgraded to v4 due to a bug with ignore_errors:
# https://github.com/clap-rs/clap/issues/4391
clap = { version = "3.2.22", features = ["derive"] }
globset = "0.4.9"
predicates = "2.1.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = "0.9.13"
walkdir = "2"