[package]
name = "turbo"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
build-target = "0.4.0"
bindgen = "0.61.0"

[dev-dependencies]
assert_cmd = "2.0.4"
itertools = "0.10.5"

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
clap = { version = "4.0.18", features = ["derive"] }
globset = "0.4.9"
predicates = "2.1.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = "0.8.26"
walkdir = "2"
