[package]
name = "coverage"
version = "0.1.0"
edition = { workspace = true }
license = "MIT"

[[bin]]
name = "coverage"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
glob = "0.3"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
which = "6.0"
