[package]
name = "globwalk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob-match = { version = "0.2.1", path = "../glob-match", features = ["unic-segment"] }
itertools.workspace = true
path-slash = "0.2.1"
thiserror.workspace = true
turbopath = { path = "../turbopath" }
walkdir = "2.3.3"

[dev-dependencies]
tempdir = "0.3.7"
test-case = "3.1.0"
