[package]
name = "globwalk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
path-slash = "0.2.1"
thiserror.workspace = true
turbopath.workspace = true
walkdir = "2.3.3"
wax = "0.5.0"

[dev-dependencies]
tempdir = "0.3.7"
test-case = "3.1.0"
