[package]
name = "libghostty-vt-sys"
version = "0.2.0"
edition = "2024"
rust-version = "1.90"
description = "Raw FFI bindings for libghostty-vt (Turborepo portability patches)"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/uzaaft/libghostty-rs"
links = "ghostty-vt"
build = "build.rs"

[features]
default = ["vendored"]
bindgen-tool = ["dep:bindgen", "dep:libc", "dep:heck"]
kitty-graphics = []
link-dynamic = []
pkg-config = ["dep:pkg-config"]
vendored = []

[lib]
name = "libghostty_vt_sys"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "gen-bindings"
path = "tools/gen_bindings.rs"
required-features = ["bindgen-tool"]

[dependencies]
bindgen = { version = "0.72.1", optional = true }
heck = { version = "0.5", optional = true }
libc = { version = "0.2", optional = true }

[build-dependencies]
pkg-config = { version = "0.3", optional = true }
