[package]
name = "next-dev-tests"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"
autobenches = false

# don't publish this crate
publish = false

[dependencies]
anyhow = "1.0.47"
clap = { version = "4.0.18", features = ["derive", "env"], optional = true }
console-subscriber = { version = "0.1.8", optional = true }
futures = "0.3.25"
mime = "0.3.16"
next-core = { path = "../next-core" }
next-dev = { path = "../next-dev" }
owo-colors = "3"
serde = "1.0.136"
tokio = { version = "1.21.2", features = ["full"] }
turbo-malloc = { path = "../turbo-malloc", default-features = false }
turbo-tasks = { path = "../turbo-tasks" }
turbo-tasks-fs = { path = "../turbo-tasks-fs" }
turbo-tasks-memory = { path = "../turbo-tasks-memory" }
turbopack-cli-utils = { path = "../turbopack-cli-utils" }
turbopack-core = { path = "../turbopack-core" }
turbopack-dev-server = { path = "../turbopack-dev-server" }
turbopack-node = { path = "../turbopack-node" }
webbrowser = "0.7.1"

[dev-dependencies]
chromiumoxide = { version = "0.4.0", features = [
  "tokio-runtime",
], default-features = false }
criterion = { version = "0.4.0", features = ["async_tokio"] }
fs_extra = "1.2.0"
lazy_static = "1.4.0"
once_cell = "1.13.0"
parking_lot = "0.12.1"
portpicker = "0.1.1"
rand = "0.8.5"
regex = "1.6.0"
serde_json = "1.0.85"
tempfile = "3.3.0"
test-generator = "0.3.0"
# For matching on errors from chromiumoxide. Keep in
# sync with chromiumoxide's tungstenite requirement.
tungstenite = "0.17.3"
turbo-tasks-testing = { path = "../turbo-tasks-testing" }
turbopack-create-test-app = { path = "../turbopack-create-test-app" }
url = "2.2.2"


[build-dependencies]
turbo-tasks-build = { path = "../turbo-tasks-build" }
