[package]
name = "turbo-shim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
# semver does note that it is designed to parse Cargo's interpretation of semver.
# Therefore we cannot use it to parse semver strings in general. However, it is
# good enough to parse semver strings that we control, i.e. turbo's own version
semver = "1.0.14"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = "0.8.26"
turborepo = { path = "../turborepo" }
yarn-lock-parser = "0.4.0"
