[package]
name = "turbo-tasks-bytes"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"

[lib]
bench = false

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
turbo-tasks = { workspace = true }

[build-dependencies]
turbo-tasks-build = { workspace = true }
