[package]
name = "turbo-tasks-macros"
version = "0.1.0"
description = "TBD"
license = "MPL-2.0"
edition = "2021"

[lib]
proc-macro = true
bench = false

[dependencies]
anyhow = { workspace = true }
convert_case = "0.6.0"
proc-macro-error = "1.0.4"
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
turbo-tasks-macros-shared = { workspace = true }

[dev-dependencies]
# TODO: turbo-tasks-testing uses a macro that requires us to depend on lazy-static.
lazy_static = { workspace = true }
tokio = { workspace = true }
turbo-tasks = { workspace = true }
turbo-tasks-memory = { workspace = true }
turbo-tasks-testing = { workspace = true }

[build-dependencies]
turbo-tasks-build = { workspace = true }
